Uploading to the esp vai ota and ip address

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,8 +12,16 @@
 platform = espressif32
 board = esp32dev
 framework = arduino
+monitor_speed = 115200
+upload_speed = 921600
+upload_flags = -p 3232  #This fix issue -> https://github.com/platformio/platform-espressif32/issues/197 
+upload_port = 192.168.0.127  #Example: 192.168.0.166
 lib_deps = 
 	lennarthennigs/Button2@^1.6.2
 	olkal/HX711_ADC@^1.2.8
 	bogde/HX711@^0.7.4
 	ul-gh/ESP32Touch@^0.1.0
+	thinger-io/thinger.io@^2.18.0
+   https://github.com/JakubAndrysek/BasicOTA-ESP32-library.git
+
+
